Fix broken identity page layout on small screens (#198)

--- a/src/Turnierplan.App/Client/src/app/identity/identity.component.scss
+++ b/src/Turnierplan.App/Client/src/app/identity/identity.component.scss
@@ -1,5 +1,6 @@
 $background-color: #2c3a3d;
 $background-image: 'identity-2025.03.jpg';
+$content-width: 575px;
 
 @media (width >= 900px) {
   .background {
@@ -17,7 +18,7 @@ $background-image: 'identity-2025.03.jpg';
   }
 
   .identity-content {
-    width: 550px;
+    width: $content-width;
     min-height: 600px;
     border-top-right-radius: 1em;
     border-bottom-right-radius: 1em;
@@ -34,7 +35,6 @@ $background-image: 'identity-2025.03.jpg';
     background-color: $background-color;
     height: 100vh;
     margin: 0;
-    padding: 0 1em;
   }
 
   .identity-image {
@@ -42,6 +42,7 @@ $background-image: 'identity-2025.03.jpg';
   }
 
   .identity-content {
+    width: min(calc(100vw - 4em), $content-width);
     border-radius: 0.75em;
   }
 
